Alguns ajustes na tela da descrição e tambem da lista de generos

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:label="@string/title_activity_list_movie"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
-            android:name=".ActivityListGenres"
+            android:name=".ListGenresActivity"
             android:label="@string/title_activity_list_genres"
             android:theme="@style/AppTheme"></activity>
     </application>
